# astrocast

./: .env  .env.example  .gitignore  README.md  SOFT_DELETE.md  dockerfile  manage.py  postman.json  pyproject.toml  requeriments.txt  requirements.txt
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_language.py  0003_userprofile_updates.py
astrocast/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_eventrequest_weather_query_and_more.py  0003_eventrequest_soft_delete.py
weather/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_weatherquery.py  0003_location_soft_delete.py
